--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	  <p>Welcome to Guilduron. A nice place to just chill out, build, chat, explore. We are a Minecraft Guild Server who strives to bring the adulthood back into Minecraft. With Guilds you can now invite your firends to join your efforts on the server to become the top players. With team efforts put towards the Guild, you can buy Buffs and empower your guild for action. You can also share your wealth withing your Guild using the Guilds Vault, a shareable chest for every member. When you're not Guilding it up, take a moment to explore the server. Rest assured you'll be able to make your way around easily. Here we run a few plugins to enrich gameplay all-around. Making an enjoyable experience for those who are wanting to actually play.</p>
 	  <p>Chatting has been expanded on as well. Guilds have their own chat so you can talk discretely amonst your Guild Members. But don't worry about those annoyances, there is also a very well functioning ignore feature. An admin is usually keeping a partial eye open with Discord and is easily able to help out without even being in game. We have a protected spawn, with Nether and End Portals available. Colored Anvils, Economy, 100+ New Achievements.	    </p>
 	  <p>The best part, it's all free. No donor perks here. So, sit back, get your block on. </p></blockquote><br>
-<p><center><a href="paypal.me/Guilduron">Support our server and donate today!</a></center></p>
+<p><center><a href="https://www.paypal.me/Guilduron">Support our server and donate today!</a></center></p>
 	</div>
 </div>
 </div>
