--- a/info.html
+++ b/info.html
@@ -181,7 +181,7 @@
         </tbody>
       </table>
 <br>
-<p><center><a href="paypal.me/Guilduron">Support our server and donate today!</a></center></p>
+<p><center><a href="https://www.paypal.me/Guilduron">Support our server and donate today!</a></center></p>
 	</div>
 </div>    
 </div>
