--- a/econ.html
+++ b/econ.html
@@ -1625,7 +1625,7 @@
 				        </table></th>
 				      </tr>
 			    </table><br>
-<p><center><a href="paypal.me/Guilduron">Support our server and donate today!</a></center></p>
+<p><center><a href="https://www.paypal.me/Guilduron">Support our server and donate today!</a></center></p>
 			  </div>
 	</div>
 </div>
