--- a/guilds.html
+++ b/guilds.html
@@ -260,7 +260,7 @@ $(document).ready(function() {
   </tr>
 </table>
 <br>
-<p><center><a href="paypal.me/Guilduron">Support our server and donate today!</a></center></p>
+<p><center><a href="https://www.paypal.me/Guilduron">Support our server and donate today!</a></center></p>
 </div>
 	</div>
 </div>
